fix height on mobile

--- a/Client/wwwroot/css/styles.css
+++ b/Client/wwwroot/css/styles.css
@@ -11540,5 +11540,5 @@ header.masthead h1, header.masthead .h1 {
 }
 
 .page-section-about {
-  height: 100vh;
+  min-height: 100vh;
 }
